--- a/.github/workflows/first-project-deployment-action.yml
+++ b/.github/workflows/first-project-deployment-action.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./First_Project_GA
 
       - name: Run tests
-        run: run test
+        run: npm test
+        working-directory: ./First_Project_GA
