--- a/.github/workflows/first-project-deployment-action.yml
+++ b/.github/workflows/first-project-deployment-action.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Build Project
         run: npm run build
+        working-directory: ./First_Project_GA
 
       - name: Deploy
         run: echo "Deploying..."
+        working-directory: ./First_Project_GA
