--- a/.github/workflows/first-project-deployment-action.yml
+++ b/.github/workflows/first-project-deployment-action.yml
@@ -1,5 +1,10 @@
 name: Deploy Project
 on: push
+
+defaults:
+  run:
+    working-directory: ./First_Project_GA
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,14 +19,13 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./First_Project_GA
 
       - name: Run tests
         run: npm test
-        working-directory: ./First_Project_GA
 
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -33,12 +37,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./First_Project_GA
 
       - name: Build Project
         run: npm run build
-        working-directory: ./First_Project_GA
 
       - name: Deploy
         run: echo "Deploying..."
-        working-directory: ./First_Project_GA
