--- a/.github/workflows/artifact-test.yml
+++ b/.github/workflows/artifact-test.yml
@@ -2,7 +2,7 @@ name: Test uploading and downloading artifacts
 on:
   push:
     paths:
-      - ./.github/workflows/artifact-test.yml
+      - .github/workflows/artifact-test.yml
   workflow_dispatch:
 jobs: 
   build: 
