Added working directory path for dependency caching workflow file

--- a/.github/workflows/dependency-caching-test.yml
+++ b/.github/workflows/dependency-caching-test.yml
@@ -8,7 +8,11 @@ on:
 jobs: 
   build: 
     runs-on: ubuntu-latest 
-  
+    
+    defaults:
+      run:
+        working-directory: ./First_Project_GA
+
     steps: 
       - uses: actions/checkout@v4 
       - uses: actions/setup-node@v4 
